fix: product management auto alignment

--- a/client/src/admin/components/ProductManagement/index.module.scss
+++ b/client/src/admin/components/ProductManagement/index.module.scss
@@ -71,7 +71,7 @@
 
   @include deskmin {
     width: 686px;
-    margin: 36px;
+    margin: 36px auto;
 
     & > div:first-of-type {
       margin-bottom: 56px;
